bonus/confs/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-app
  namespace: dev
spec:
  selector:
    matchLabels:
      app: wil-app
  template:
    metadata:
      labels:
        app: wil-app
    spec:
      imagePullSecrets:
      - name: dockercfg
      containers:
      - name: wil-app
        image: wil42/playground:v2
        ports:
        - containerPort: 8888

---

apiVersion: v1
kind: Service
metadata:
  name: wil-app-service
spec:
  type: LoadBalancer
  selector:
    app: wil-app
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
